# carpapi

./: .gitignore  Makefile  README.md  STACK_DECISION.md  architecture.md  docker-compose.yml  package-lock.json  requirements.txt
CarPapi Fleet _ Design System/: README.md  SKILL.md  colors_and_type.css
carpapi/: __init__.py
context/: ai-cache-rules.md  compliance-rules.md  data-schema.md  deduplication-rules.md  git-workflow-rules.md  monitoring-rules.md  project-overview.md  ranking-rules.md  scraper-rules.md  user-chat-style.md
crawler/: crawler.py  extractor.py  fetcher.py  parser.py  run.py
data/: profile_cache.sqlite  token_cache.sqlite
demo4/: .gitignore  package-lock.json  package.json
deploy/: DEPLOY_STATE.md  DEV.md  Dockerfile  PRODUCTION.md  README.md  apprunner.yaml  apprunner_fleet_read_policy.json  aws_bootstrap.sh  aws_teardown.sh  deploy_apprunner.sh  deploy_aws_cost_sentinel.sh  deploy_run_queue_dispatcher.sh  eventbridge_schedules.sh  github_oidc_setup.sh  iam_bedrock_policy.json  migrate_to_rds.sh
eval/: README.md  run_cms_discovery_eval.py  run_db_repos_eval.py  run_pii_redaction_eval.py  run_planner_eval.py  (+3 more)
pipeline/: README.md  pyproject.toml
pipeline/carapi_pipeline/: __init__.py  cli.py  daily_report.py  dedupe.py  metrics.py  models.py  normalize.py  pii.py  pipeline.py  raw_store.py  scraper_stub.py  settings.py  zip_centroids.py
pipeline/carapi_pipeline/fixtures/: sample_listings.json
scripts/: dev.sh  (+2 more)
services/api/: README.md  pyproject.toml
services/api/carapi_api/: __init__.py  main.py  orchestrator.py  query_exec.py
(+283 files in other folders)
